# eth-bridge-pru-serial485

./: .gitignore  BBB_server_PRUserial485.py  PRUserial485.py  README.md  beaglebone-ip.txt  constants_PRUserial485_bridge.py  functions_PRUserial485_bridge.py  remote.py  server.py
.github/workflows/: python-package.yml
client/: Makefile  PRUserial485.py  VERSION  comandos.py  curva.txt  curva3920.txt  pyproject.toml  setup.cfg  setup.py  teste.py
client/PRUserial485/: PRUserial485.py  PRUserial485.py.save  VERSION  __init__.py  constants_PRUserial485_bridge.py  consts.py  functions_PRUserial485_bridge.py
common/: constants_PRUserial485_bridge.py  consts.py  functions_PRUserial485_bridge.py  utils.py
server/: BBB_server_PRUserial485.py  BBB_server_PRUserial485_general.py  BBB_server_PRUserial485_read_write.py  Makefile  README.md  consts.py  teste-server.c
server/feedforward/: ffunctions.py
server/services/: bridge-pru-serial485-general.service  bridge-pru-serial485-rw.service  c-eth-bridge-pru-serial485.service  eth-bridge-pru-serial485.service
test/: test_connect.py  test_read.py  test_request.py  test_write.py
