[metadata]
name = PRUserial485
version = file: PRUserial485/VERSION
author = 'Patricia Nallin'
author_email = patricia.nallin@cnpem.br
url = 'https://github.com/lnls-sirius/eth-bridge-pru-serial485'
description = 'PRUserial485 client module for BBB ethernet bridge'
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
zip_safe = True
include_package_data = True


